All html structure done

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <header>
             <nav>
                 <ul>
-                    <span>Inicio</span>
-                    <span>Loja</span>
-                    <span>Sobre</span>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="loja.html">Loja</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                 </ul>
             </nav>
             <hr>
@@ -75,9 +75,21 @@
         <footer>
             <h3>Gojira</h3>
             <ul>
-                <li><img src="/Images/youtube-logo.png" width="1.7%" height="1.7%"></li>
-                <li><img src="/Images/Spotify_logo.svg.png" width="1.7%" height="1.7%"></li>
-                <li><img src="/Images/Facebook_logo.png.png" width="1.7%" height="1.7%"></li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UC34wpCgr3l9cG0RtFdTTS-Q" target="_blank">
+                        <img src="/Images/youtube-logo.png" width="15">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://open.spotify.com/artist/0GDGKpJFhVpcjIGF8N6Ewt?si=ckk2pXxyQ5Ke5nLS-Zr_Kw" target="_blank">
+                        <img src="/Images/Spotify_logo.svg.png" width="15">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/GojiraMusic" target="_blank">
+                        <img src="/Images/Facebook_logo.png.png" width="15">
+                    </a>
+                </li>
             </ul>
         </footer>
     </body>
