--- a/sobre.html
+++ b/sobre.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gojira</title>
+        <title>Gojira | Sobre</title>
         <meta name="descriçãp" content="Essa é uma descrição.">
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                    <span>Inicio</span>
-                    <span>Loja</span>
-                    <span>Sobre</span>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="loja.html">Loja</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                 </ul>
             </nav>
         </header>
@@ -21,7 +21,7 @@
             Christian Andreu como segundo guitarrista, e Jean-Michel Labadie como baixista, formação esta que é a mesma desde que a banda mudou de nome.
             A banda é conhecida por ter letras que tratam da natureza, espiritualidade, vida e morte. Atualmente o Gojira é uma das principais bandas do metal moderno ao lado de nomes
             como: Slipknot, Opeth, Lamb of God e Mastodon.</p>
-            <img src="/Images/Gojira membros.png" width="20%" height="20%">
+            <img src="/Images/Gojira membros.png">
             <p>Até o momento, a banda lançou seis álbuns de estúdio e três DVDs ao vivo. Eles são conhecidos por suas letras que retratam temas e questões relacionadas ao meio ambiente,
             em prol da preservação dos recursos naturais do planeta terra, além de abordarem questões e pensamentos filosóficos à cerca da vida, da morte e da espiritualidade. Ademais,
             a banda já foi descrita como um grupo que "saiu da obscuridade" para estar entre os "líderes do metal do novo milênio". Por fim, em 2017, Gojira recebeu indicações ao
@@ -35,9 +35,21 @@
         <footer>
             <h3>Gojira</h3>
             <ul>
-                <li><img src="/Images/youtube-logo.png" width="1.7%" height="1.7%"></li>
-                <li><img src="/Images/Spotify_logo.svg.png" width="1.7%" height="1.7%"></li>
-                <li><img src="/Images/Facebook_logo.png.png" width="1.7%" height="1.7%"></li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UC34wpCgr3l9cG0RtFdTTS-Q" target="_blank">
+                        <img src="/Images/youtube-logo.png" width="15">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://open.spotify.com/artist/0GDGKpJFhVpcjIGF8N6Ewt?si=ckk2pXxyQ5Ke5nLS-Zr_Kw" target="_blank">
+                        <img src="/Images/Spotify_logo.svg.png" width="15">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/GojiraMusic" target="_blank">
+                        <img src="/Images/Facebook_logo.png.png" width="15">
+                    </a>
+                </li>
             </ul>
         </footer>
     </body>
