--- a/sobre.html
+++ b/sobre.html
@@ -3,25 +3,27 @@
     <head>
         <title>Gojira | Sobre</title>
         <meta name="descriçãp" content="Essa é uma descrição.">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header>
-            <nav>
+        <header class="main-header">
+            <nav class="nav main-nav">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="loja.html">Loja</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                 </ul>
             </nav>
+            <h1 class="band-name band-name-large">Gojira</h1>
         </header>
-        <section>
-            <h2>Sobre</h2>
+        <section class="content-section container">
+            <h2 class="section-header">Sobre</h2>
+            <img class="sobre-gojira-image" src="/Images/Gojira membros.png">
             <p>Gojira é uma banda de death metal progressivo francesa formada em 1996 em Baiona, França. Formado inicialmente com o nome de Godzilla,
             a banda alterou o nome em 2001. Gojira é composto pelo vocalista, guitarrista e compositor Joe Duplantier, seu irmão mais novo e baterista Mario Duplantier,
             Christian Andreu como segundo guitarrista, e Jean-Michel Labadie como baixista, formação esta que é a mesma desde que a banda mudou de nome.
             A banda é conhecida por ter letras que tratam da natureza, espiritualidade, vida e morte. Atualmente o Gojira é uma das principais bandas do metal moderno ao lado de nomes
             como: Slipknot, Opeth, Lamb of God e Mastodon.</p>
-            <img src="/Images/Gojira membros.png">
             <p>Até o momento, a banda lançou seis álbuns de estúdio e três DVDs ao vivo. Eles são conhecidos por suas letras que retratam temas e questões relacionadas ao meio ambiente,
             em prol da preservação dos recursos naturais do planeta terra, além de abordarem questões e pensamentos filosóficos à cerca da vida, da morte e da espiritualidade. Ademais,
             a banda já foi descrita como um grupo que "saiu da obscuridade" para estar entre os "líderes do metal do novo milênio". Por fim, em 2017, Gojira recebeu indicações ao
@@ -32,25 +34,27 @@
             Esta última também elegeu a faixa "Born for One Thing" como a 4ª melhor música de metal de 2021.</p>
         </section>
 
-        <footer>
-            <h3>Gojira</h3>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/channel/UC34wpCgr3l9cG0RtFdTTS-Q" target="_blank">
-                        <img src="/Images/youtube-logo.png" width="15">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://open.spotify.com/artist/0GDGKpJFhVpcjIGF8N6Ewt?si=ckk2pXxyQ5Ke5nLS-Zr_Kw" target="_blank">
-                        <img src="/Images/Spotify_logo.svg.png" width="15">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/GojiraMusic" target="_blank">
-                        <img src="/Images/Facebook_logo.png.png" width="15">
-                    </a>
-                </li>
-            </ul>
+        <footer class="main-footer">
+            <div class="container main-footer-container">
+                <h3 class="band-name">Gojira</h3>
+                <ul class="nav footer-nav">
+                    <li>
+                        <a href="https://www.youtube.com/channel/UC34wpCgr3l9cG0RtFdTTS-Q" target="_blank">
+                            <img src="/Images/youtube logo.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://open.spotify.com/artist/0GDGKpJFhVpcjIGF8N6Ewt?si=ckk2pXxyQ5Ke5nLS-Zr_Kw" target="_blank">
+                            <img src="/Images/Spotify_logo.svg.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/GojiraMusic" target="_blank">
+                            <img src="/Images/Facebook_logo.png">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </footer>
     </body>
 </html>
